src/codegen/snapshots/hebi__codegen__tests__import_whole.snap
---
source: src/codegen/tests.rs
expression: snapshot
---
# Input:
import test
print test.symbol


# Func:
function `main` (registers: 2, length: 10, constants: 2)
.code
  0  | import [0]; test
  2  | store r1
  4  | load r1
  6  | load_field [1]; symbol
  8  | print
  9  | return




