src/codegen/snapshots/hebi__codegen__tests__loop_break.snap
---
source: src/codegen/tests.rs
expression: snapshot
---
# Input:
loop:
  break


# Func:
function `main` (registers: 1, length: 5, constants: 1)
.code
  0 | jump 4
  2 | jump_loop 2
  4 | return




