src/codegen/snapshots/hebi__codegen__tests__loop_nested_loop.snap
---
source: src/codegen/tests.rs
expression: snapshot
---
# Input:
loop:
  loop:
    continue
  continue


# Func:
function `main` (registers: 1, length: 9, constants: 0)
.code
  0 | jump_loop 0
  2 | jump_loop 2
  4 | jump_loop 4
  6 | jump_loop 6
  8 | return




