src/codegen/snapshots/hebi__codegen__tests__loop_print.snap
---
source: src/codegen/tests.rs
expression: snapshot
---
# Input:
loop:
  print "test"


# Func:
function `main` (registers: 1, length: 6, constants: 1)
.code
  0 | load_const [0]; test
  2 | print
  3 | jump_loop 3
  5 | return




